--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.0.0-beta.4",
+    "@better-scroll/pull-up": "^2.0.0-beta.4",
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
     "qs": "^6.9.1",
