--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.4.4",
     "qs": "^6.9.1",
     "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
